Adding initial code for landing page video. Need to make it work with Angular as JS code is for jQuery

--- a/client/app/landing/howitworks.html
+++ b/client/app/landing/howitworks.html
@@ -1,8 +1,19 @@
 <!-- START HOW IT WORKS -->
 
-<div class="howitworks">
-  <div class="container">
-
+<div class="homepage-hero-module">
+  <div class="video-container">
+    <div class="filter"></div>
+    <div class="title-container">
+      <h1>Chat with your university student services - RA's, ResLife, Career Center, etc.</h1>
+      <h3>Coming Soon</h3>
+    </div>
+    <video autoplay loop class="fillWidth">
+      <source src="https://cover-videos.s3.amazonaws.com/For_Wes/MP%24/For_Wes.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+      <source src="https://cover-videos.s3.amazonaws.com/For_Wes/WEBM/For_Wes.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+    </video>
+    <div class="poster hidden">
+      <img src="https://cover-videos.s3.amazonaws.com/For_Wes/Snapshots/For_Wes.jpg" alt="">
+    </div>
   </div>
 </div>
 
