Landing page changes. Added working video for university services. Change about page and footer.

--- a/client/app/landing/howitworks.html
+++ b/client/app/landing/howitworks.html
@@ -8,11 +8,11 @@
       <h3>Coming Soon</h3>
     </div>
     <video autoplay loop class="fillWidth">
-      <source src="https://cover-videos.s3.amazonaws.com/For_Wes/MP%24/For_Wes.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-      <source src="https://cover-videos.s3.amazonaws.com/For_Wes/WEBM/For_Wes.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+      <source src="././../assets/videos/keyboard/keyboard.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+      <source src="././../assets/videos/keyboard/keyboard.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
     </video>
     <div class="poster hidden">
-      <img src="https://cover-videos.s3.amazonaws.com/For_Wes/Snapshots/For_Wes.jpg" alt="">
+      <img src="././../assets/videos/keyboard/keyboard.jpg" alt="Chat with your university services">
     </div>
   </div>
 </div>
