--- a/client/app/landing/community.html
+++ b/client/app/landing/community.html
@@ -14,6 +14,23 @@
 
     </section>
 
+    <div class="row  text-center">
+      <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 lead-btn">
+        <button class="btn-rented-large primary" ui-sref="signup">Sign Up For Free!</button>
+      </div>
+    </div>
+
+    <div class="row lead-btn">
+      <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6">
+        <a href="https://mixpanel.com/f/partner" class="pull-right"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
+      </div>
+      <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6">
+        <div id="GoDaddySSLSeal">
+          <img src="./../assets/images/siteSeal/siteseal_gd_3_h_d_m.gif">
+        </div>
+      </div>
+    </div>
+
   </div>
 
 </div>
