New left slider menu. Using Pubnub v3.4.17.

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
       {mixpanel.init("bd202854d110bac5e72d7e034abdae01", {'loaded':function() {window.Gdistinct_id = mixpanel.get_distinct_id();}})} else {
     mixpanel.init("41a02b2df2e263307327276d0ed559ec", {'loaded':function() {window.Gdistinct_id = mixpanel.get_distinct_id();}})}</script><!-- end Mixpanel -->
     <script src="//cdn.optimizely.com/js/2780703231.js"></script> <!-- Optimizely code snippet -->
-    <script src="https://cdn.pubnub.com/pubnub-3.7.12.min.js"></script> <!-- Core PubNub JS Library from CDN. Need to call a specific version -->
+    <script src="https://cdn.pubnub.com/pubnub-3.7.14.js"></script> <!-- Core PubNub JS Library from CDN. Need to call a specific version -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
@@ -180,7 +180,6 @@
           <script src="components/core/in.groups.of.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
-          <script src="components/layout/navbar/sub-navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
           <script src="components/widgets/confirm-password/confirm.password.directive.js"></script>
           <script src="components/widgets/distance-calculator/distance.calculator.service.js"></script>
@@ -188,6 +187,7 @@
           <script src="components/widgets/fileupload/fileupload.js"></script>
           <script src="components/widgets/fileupload/ngthumb.js"></script>
           <script src="components/widgets/loading/loading.js"></script>
+          <script src="components/widgets/menu/angular-pageslide.js"></script>
           <script src="components/widgets/modal/modal.service.js"></script>
           <script src="components/widgets/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/widgets/my-spinner/my.spinner.js"></script>
