Navbar changes. Only messages icon showing on navbar. UC Davis logo default for now

--- a/client/app/landing/community.html
+++ b/client/app/landing/community.html
@@ -14,7 +14,7 @@
 
     </section>
 
-    <div class="row  text-center">
+    <div class="row text-center">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 lead-btn">
         <button class="btn-rented-large primary" ui-sref="signup">Sign Up For Free!</button>
       </div>
@@ -22,7 +22,7 @@
 
     <div class="row lead-btn">
       <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6">
-        <a href="https://mixpanel.com/f/partner" class="pull-right"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
+        <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
       </div>
       <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6">
         <div id="GoDaddySSLSeal">
