v1 code for moving PubNub to service across the website

--- a/client/index.html
+++ b/client/index.html
@@ -182,6 +182,7 @@
           <script src="components/layout/navbar/navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
           <script src="components/widgets/confirm-password/confirm.password.directive.js"></script>
+          <script src="components/widgets/currentUser/currentUserService.js"></script>
           <script src="components/widgets/distance-calculator/distance.calculator.service.js"></script>
           <script src="components/widgets/facebook-share/facebook.share.js"></script>
           <script src="components/widgets/fileupload/fileupload.js"></script>
@@ -192,6 +193,7 @@
           <script src="components/widgets/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/widgets/my-spinner/my.spinner.js"></script>
           <script src="components/widgets/phone-mask/phone.mask.js"></script>
+          <script src="components/widgets/pubnub/pubNubService.js"></script>
           <script src="components/widgets/slider/slider.js"></script>
           <script src="components/widgets/widget.config.js"></script>
           <!-- endinjector -->
