--- a/client/app/landing/howitworks.html
+++ b/client/app/landing/howitworks.html
@@ -8,8 +8,8 @@
       <h3>Coming Soon</h3>
     </div>
     <video autoplay loop class="fillWidth">
-      <source src="././../assets/videos/keyboard/keyboard.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-      <source src="././../assets/videos/keyboard/keyboard.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+      <source src="././../assets/videos/keyboard/keyboard.webm" type="video/webm" />
+      <source src="././../assets/videos/keyboard/keyboard.mp4" type="video/mp4" />
     </video>
     <div class="poster hidden">
       <img src="././../assets/videos/keyboard/keyboard.jpg" alt="Chat with your university services">
