--- a/client/app/landing/howitworks.html
+++ b/client/app/landing/howitworks.html
@@ -11,7 +11,7 @@
       <source src="././../assets/videos/keyboard/keyboard.webm" type="video/webm" />
       <source src="././../assets/videos/keyboard/keyboard.mp4" type="video/mp4" />
     </video>
-    <div class="poster hidden">
+    <div class="poster">
       <img src="././../assets/videos/keyboard/keyboard.jpg" alt="Chat with your university services">
     </div>
   </div>
