Changes to output user info to room grid. Infinite scroll bower component added

--- a/client/index.html
+++ b/client/index.html
@@ -99,6 +99,7 @@
       <script src="bower_components/ng-optimizely/ng-optimizely.js"></script>
       <script src="bower_components/angular-media-queries/match-media.js"></script>
       <script src="bower_components/pubnub-angular/lib/pubnub-angular.js"></script>
+      <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
