--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -84,6 +84,19 @@
                       <li><i class="fa fa-map-marker"></i>&nbsp;&nbsp;{{room.propertyDetails.city}}</li>
                     </ul>
                     </a>
+                    <table>
+                      <tr>
+                        <td><i class="fa fa-comments-o fa-lg"></i></td>
+                        <td>
+                          <a id="email" ng-href="mailto:{{room.relatedCreatorId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{room.relatedCreatorId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{rooms.me.firstname}}%0Ahttps://campusly.org/roomDetail/{{room.roomDetails.id}}/of/{{room.roomDetails.id}}">
+                            <i class="fa fa-envelope-o fa-lg"></i></a>
+                          <script type="text/javascript">
+                            mixpanel.track_links("#email", "Email sent - available room");
+                          </script>
+                        </td>
+                        <td><i class="fa fa-facebook-square fa-lg"></i></td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
