--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,6 @@
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-      <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
       <link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
       <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
       <link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css" />
@@ -81,7 +80,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-      <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
+      <script src="bower_components/angular-file-upload/angular-file-upload.min.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
       <script src="bower_components/angular-busy/dist/angular-busy.js"></script>
