--- a/client/app/messages/messages.html
+++ b/client/app/messages/messages.html
@@ -73,6 +73,7 @@
       <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
 
         <h2>{{messages.currentChannel.name}}</h2>
+        <button ng-click="messages.grabCurrentChatHistory()">Older Chat history</button>
         <div class="white-box-messages">
 
           <!-- Messages to show the user -->
