--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -53,7 +53,7 @@
           <div class="white-box profile-sidebar">
             <div class="profile">
               <img class="img-circle" ng-if="dashboard.me.profileImage" ng-src="/api/images{{dashboard.me.profileImage}}">
-              <i ng-if="!dashboard.me.profileImage" class="fa fa-user fa-5x img-circle" style="text-align: center; display: inline-block;width: 100%;"></i>
+              <i ng-if="!dashboard.me.profileImage" class="fa fa-smile-o fa-3x img-circle" style="text-align: center; display: inline-block;width: 100%;"></i>
               <h2> {{dashboard.me.firstname}} {{dashboard.me.lastname}} </h2>
               <a class="btn btn-secondary btn-block" ui-sref="myProfile"> My Profile </a>
               <p><br></p>
@@ -111,6 +111,25 @@
                     <li><i class="fa fa-map-marker"></i>&nbsp;&nbsp;{{room.propertyDetails.city }}</li>
                   </ul>
                 </a>
+                <table>
+                  <tr>
+                    <!--<td><i class="fa fa-comments-o fa-lg"></i></td>-->
+                    <td>
+                      <a id="email" ng-href="mailto:{{room.relatedCreatorId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{room.relatedCreatorId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{dashboard.me.firstname}}%0Ahttps://campusly.org/roomDetail/{{room.roomDetails.id}}/of/{{room.roomDetails.id}}">
+                        <i class="fa fa-envelope-o fa-lg"></i></a>
+                      <script type="text/javascript">
+                        mixpanel.track_links("#email", "Email sent - available room");
+                      </script>
+                    </td>
+                    <td>
+                      <a id="facebookPM" ng-if="room.relatedCreatorId.facebook" ng-href="{{room.relatedCreatorId.facebook}}" target="_blank">
+                        <i class="fa fa-facebook-square fa-lg"></i></a>
+                      <script type="text/javascript" ng-if="room.relatedCreatorId.facebook">
+                        mixpanel.track_links("#facebookPM", "Facebook PM sent - available room");
+                      </script>
+                    </td>
+                  </tr>
+                </table>
               </div>
               <!-- end room box -->
             </slick>
@@ -138,12 +157,10 @@
                   <div  class="media">
                     <div class="media-left">
                       <img ng-if="looking.relatedUserId.profileImage" ng-src="api/images{{looking.relatedUserId.profileImage}}" class="img-circle" height="100px" width="100px">
-                      <i ng-if="!looking.relatedUserId.profileImage" class="fa fa-user fa-5x"></i>
+                      <i ng-if="!looking.relatedUserId.profileImage" class="fa fa-smile-o fa-3x"></i>
                     </div>
                     <div class="media-body">
-                      <h4 class="media-heading user-name">
-                        {{looking.relatedUserId.firstname}} {{looking.relatedUserId.lastname}}
-                      </h4>
+                      <h4 class="media-heading user-name" ng-bind="looking.relatedUserId.firstname + '&nbsp;' + looking.relatedUserId.lastname | limitTo: 24"></h4>
                       <p ng-show="looking.relatedUserId.aboutMe" class="quote text-container-looking">{{looking.relatedUserId.aboutMe}}</p>
                       <p ng-hide="looking.relatedUserId.aboutMe" class="quote text-container-looking">No description available</p>
                     </div>
@@ -190,12 +207,11 @@
                           <span class='address'><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;{{room.availableMoveIn | date }}</span>
 
                       <span class="elapsed-time">
-                        <small><i class="fa fa-clock-o"></i>&nbsp{{room.createdAt | date:'longDate'}}</small>
+                        <small><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Created on {{room.createdAt | date:'longDate'}}</small>
                       </span>
 
                       <span class="elapsed-time" ng-if="room.updatedAt">
-                           <small><i class="fa fa-pencil"></i></small>
-                           <small am-time-ago="room.updatedAt"></small>
+                        <small><i class="fa fa-pencil"></i>&nbsp;&nbsp;Last updated at {{room.updatedAt  | date:'longDate'}}</small>
                       </span>
 
                         </div>
@@ -251,12 +267,11 @@
                           <span class='address'><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;{{look.moveInDate | date}}</span>
 
                           <span class="elapsed-time">
-                            <small><i class="fa fa-clock-o"></i>&nbsp{{look.createdAt | date:'longDate'}}</small>
+                            <small><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Created on {{look.createdAt | date:'longDate'}}</small>
                           </span>
 
                           <span class="elapsed-time" ng-if="look.updatedAt">
-                             <small><i class="fa fa-pencil"></i></small>
-                             <small am-time-ago="look.updatedAt"></small>
+                             <small><i class="fa fa-pencil"></i>&nbsp;&nbsp;Last updated at {{look.updatedAt  | date:'longDate'}}</small>
                           </span>
 
                         </div>
