--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -87,7 +87,7 @@
                     </a>
                     <table>
                       <tr>
-                        <td><i class="fa fa-comments-o fa-lg"></i></td>
+                        <!--<td><i class="fa fa-comments-o fa-lg"></i></td>-->
                         <td>
                           <a id="email" ng-href="mailto:{{room.relatedCreatorId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{room.relatedCreatorId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{rooms.me.firstname}}%0Ahttps://campusly.org/roomDetail/{{room.roomDetails.id}}/of/{{room.roomDetails.id}}">
                             <i class="fa fa-envelope-o fa-lg"></i></a>
@@ -95,7 +95,13 @@
                             mixpanel.track_links("#email", "Email sent - available room");
                           </script>
                         </td>
-                        <td><i class="fa fa-facebook-square fa-lg"></i></td>
+                        <td>
+                          <a id="facebookPM" ng-if="room.relatedCreatorId.facebook" ng-href="{{room.relatedCreatorId.facebook}}" target="_blank">
+                            <i class="fa fa-facebook-square fa-lg"></i></a>
+                          <script type="text/javascript" ng-if="room.relatedCreatorId.facebook">
+                            mixpanel.track_links("#facebookPM", "Facebook PM sent - available room");
+                          </script>
+                        </td>
                       </tr>
                     </table>
                   </div>
