--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -73,6 +73,25 @@
                   <li><i class="fa fa-venus-mars"></i>&nbsp;&nbsp;{{look.gender}}</li>
                 </ul>
                 </a>
+                <table>
+                  <tr>
+                    <!--<td><i class="fa fa-comments-o fa-lg"></i></td>-->
+                    <td>
+                      <a id="email" ng-href="mailto:{{look.relatedUserId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{look.relatedUserId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{looking.me.firstname}}%0Ahttps://campusly.org/lookingDetail/{{look.id}}/of/{{look.id}}">
+                        <i class="fa fa-envelope-o fa-lg"></i></a>
+                      <script type="text/javascript">
+                        mixpanel.track_links("#email", "Email sent - available room");
+                      </script>
+                    </td>
+                    <td>
+                      <a id="facebookPM" ng-if="look.relatedUserId.facebook" ng-href="{{look.relatedUserId.facebook}}" target="_blank">
+                        <i class="fa fa-facebook-square fa-lg"></i></a>
+                      <script type="text/javascript" ng-if="look.relatedUserId.facebook">
+                        mixpanel.track_links("#facebookPM", "Facebook PM sent - available room");
+                      </script>
+                    </td>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
