--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -7,9 +7,62 @@
 
       <div class="row">
         <div class="page-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <h2 ng-if="around.me.experianIdToken == 1 && around.me.shareProfile" style="display: inline">Students Around You <small>(within {{around.me.experianIdToken}} mile)&nbsp;<a ui-sref="settings({focus:'radius'})" class="btn-rented-event" >change search distance</a></small></h2>
-          <h2 ng-if="around.me.experianIdToken > 1 && around.me.shareProfile" style="display: inline">Students Around You <small>(within {{around.me.experianIdToken}} miles)&nbsp;<a ui-sref="settings({focus:'radius'})" class="btn-rented-event" >change search distance</a></small></h2>
-          <h2 ng-if="!around.me.shareProfile" style="display: inline">Students Around You</h2>
+          <h2 ng-if="around.me.experianIdToken == 1 && around.me.shareProfile" style="display: inline">Search Students Around You <small>(within {{around.me.experianIdToken}} mile)&nbsp;<a ui-sref="settings({focus:'radius'})" class="btn-rented-event" >change search distance</a></small></h2>
+          <h2 ng-if="around.me.experianIdToken > 1 && around.me.shareProfile" style="display: inline">Search Students Around You <small>(within {{around.me.experianIdToken}} miles)&nbsp;<a ui-sref="settings({focus:'radius'})" class="btn-rented-event" >change search distance</a></small></h2>
+          <h2 ng-if="!around.me.shareProfile" style="display: inline">Search Students Around You</h2>
+        </div>
+      </div>
+
+      <!-- Status update -->
+
+      <div class="row" ng-if="around.me.shareProfile">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+          <!-- search partial -->
+          <div class="interested-box-search">
+            <form name="connectToSearch" ng-submit="around.setQueryAndSearch(around.query)" novalidate>
+              <div class="row">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                  <table>
+                    <tr>
+                      <td>
+                        <h4><label class="checkbox"><input type="checkbox" ng-model="around.query.carpooling"><i class="fa fa-car fa-lg"></i></label></h4>
+                      </td>
+                      <td>
+                        <h4><label class="checkbox"><input type="checkbox" ng-model="around.query.biking"><i class="fa fa-bicycle fa-lg"></i></label></h4>
+                      </td>
+                      <td>
+                        <h4><label class="checkbox"><input type="checkbox" ng-model="around.query.walking"><i class="fa fa-child fa-lg"></i></label></h4>
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+
+                <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+                  <table>
+                    <tr>
+                      <td>
+                        <h4><label class="checkbox"><input type="checkbox" ng-model="around.query.meetUp"><i class="fa fa-coffee fa-lg"></i></label></h4>
+                      </td>
+                      <td>
+                        <h4><label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingForGroceries"><i class="fa fa-shopping-cart fa-lg"></i></label></h4>
+                      </td>
+                      <td>
+                        <h4><label class="checkbox"><input type="checkbox" ng-model="around.query.meetForStudy"><i class="fa fa-book fa-lg"></i></label></h4>
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+                  <button class="btn-rented-medium primary" type="submit" ng-disabled="!connectToSearch.$dirty">Search</button>
+                  <button class="btn-rented-small reset" ng-click="around.clearSearch()">Clear</button>
+                </div>
+
+              </div>
+            </form>
+          </div>
+          <!-- end of search partial -->
         </div>
       </div>
 
@@ -17,55 +70,7 @@
 
       <div class="row">
 
-        <!-- search buttons -->
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" ng-show="!around.showSearch">
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="!around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Search</button>
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close</button>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-show="around.showSearch">
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="!around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Search</button>
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close</button>
-        </div>
-        <!-- end of search buttons -->
-
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-          <!-- search partial -->
-          <div class="white-box interested-box-search" ng-if="around.showSearch">
-            <p style="margin-bottom: 2%">You can select multiple fields based on what you want.</p>
-            <form name="connectToSearch" ng-submit="around.setQueryAndSearch(around.query)" novalidate>
-              <div class="row">
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                  <h4><i class="fa fa-car"></i>Carpooling</h4>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingToCampus">To Campus</label>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingFromCampus">From Campus</label>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingForGroceries">For Groceries</label>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingForRoadtrip">Roadtrip</label>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.carpoolingSplit">Split a Uber/Lyft</label>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                  <h4><i class="fa fa-child"></i>Walking</h4>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.walkingToCampus">To Campus</label>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.walkingFromCampus">From Campus</label>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                  <h4><i class="fa fa-users"></i>Meeting Up</h4>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForHangout">Hangout</label>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForStudy">Study Group</label>
-                  <label class="checkbox"><input type="checkbox" ng-model="around.query.meetForEvents">Campus Events</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 col-sm-4 col-md-4 col-sm-offset-8 col-md-offset-8">
-                  <button class="btn-rented-medium primary" type="submit" ng-disabled="!connectToSearch.$dirty">Search</button>
-                  <button class="btn-rented-small reset" ng-click="around.clearSearch()">Clear</button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <!-- end of search partial -->
-
-
 
           <div ng-if="around.initialized && !around.me.shareProfile && (around.address.streetAddress.id || around.aroundYou.length)">
             <h3>Please <a ui-sref="settings({focus:'allowConnect'})">update your privacy preferences</a> to connect with students around you.</h3>
@@ -106,15 +111,12 @@
 
                   <div class="interestBox">
                     <ul class="specs" style="min-height: 100px; text-align: left">
-                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].carpoolingForGroceries || arYou.userstatusesUsers[0].carpoolingToCampus
-                    || arYou.userstatusesUsers[0].carpoolingFromCampus || arYou.userstatusesUsers[0].carpoolingForRoadtrip
-                    || arYou.userstatusesUsers[0].carpoolingSplit), 'not-interested':!(arYou.userstatusesUsers[0].carpoolingForGroceries || arYou.userstatusesUsers[0].carpoolingToCampus
-                    || arYou.userstatusesUsers[0].carpoolingFromCampus || arYou.userstatusesUsers[0].carpoolingForRoadtrip
-                    || arYou.userstatusesUsers[0].carpoolingSplit)}"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
-                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus), 'not-interested':!(arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus)}"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
-                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].meetForHangout || arYou.userstatusesUsers[0].meetForStudy
-                    || arYou.userstatusesUsers[0].meetForEvents), 'not-interested':!(arYou.userstatusesUsers[0].meetForHangout || arYou.userstatusesUsers[0].meetForStudy
-                    || arYou.userstatusesUsers[0].meetForEvents)}"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].carpooling), 'not-interested':!(arYou.userstatusesUsers[0].carpooling)}"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].biking), 'not-interested':!(arYou.userstatusesUsers[0].biking)}"><i class="fa fa-bicycle"></i>&nbsp;&nbsp;Biking</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].walking), 'not-interested':!(arYou.userstatusesUsers[0].walking)}"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].meetUp), 'not-interested':!(arYou.userstatusesUsers[0].meetUp)}"><i class="fa fa-coffee"></i>&nbsp;&nbsp;Hanging Out</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].carpoolingForGroceries), 'not-interested':!(arYou.userstatusesUsers[0].carpoolingForGroceries)}"><i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;Grocery Run</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].meetForStudy), 'not-interested':!(arYou.userstatusesUsers[0].meetForStudy)}"><i class="fa fa-book"></i>&nbsp;&nbsp;Study Group</li>
                     </ul>
                   </div>
                   </div>
