--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -34,15 +34,12 @@
               <br>
             </div>
             <ul class="specs">
-              <li ng-class="{'interested':(around.userstatusesUsers[0].carpoolingForGroceries || around.userstatusesUsers[0].carpoolingToCampus
-                    || around.userstatusesUsers[0].carpoolingFromCampus || around.userstatusesUsers[0].carpoolingForRoadtrip
-                    || around.userstatusesUsers[0].carpoolingSplit), 'not-interested':!(around.userstatusesUsers[0].carpoolingForGroceries || around.userstatusesUsers[0].carpoolingToCampus
-                    || around.userstatusesUsers[0].carpoolingFromCampus || around.userstatusesUsers[0].carpoolingForRoadtrip
-                    || around.userstatusesUsers[0].carpoolingSplit)}"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
-              <li ng-class="{'interested':(around.userstatusesUsers[0].walkingToCampus || around.userstatusesUsers[0].walkingFromCampus), 'not-interested':!(around.userstatusesUsers[0].walkingToCampus || around.userstatusesUsers[0].walkingFromCampus)}"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
-              <li ng-class="{'interested':(around.userstatusesUsers[0].meetForHangout || around.userstatusesUsers[0].meetForStudy
-                    || around.userstatusesUsers[0].meetForEvents), 'not-interested':!(around.userstatusesUsers[0].meetForHangout || around.userstatusesUsers[0].meetForStudy
-                    || around.userstatusesUsers[0].meetForEvents)}"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].carpooling), 'not-interested':!(around.userstatusesUsers[0].carpooling)}"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].biking), 'not-interested':!(around.userstatusesUsers[0].biking)}"><i class="fa fa-bicycle"></i>&nbsp;&nbsp;Biking</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].walking), 'not-interested':!(around.userstatusesUsers[0].walking)}"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].meetUp), 'not-interested':!(around.userstatusesUsers[0].meetUp)}"><i class="fa fa-coffee"></i>&nbsp;&nbsp;Hanging Out</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].carpoolingForGroceries), 'not-interested':!(around.userstatusesUsers[0].carpoolingForGroceries)}"><i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;Grocery Run</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].meetForStudy), 'not-interested':!(around.userstatusesUsers[0].meetForStudy)}"><i class="fa fa-book"></i>&nbsp;&nbsp;Study Group</li>
             </ul>
           </div>
           <table>
