Updated navbar chat icon. Updated landing page message.

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -98,7 +98,7 @@
                 </a>
                 <table>
                   <tr>
-                    <!--<td><i class="fa fa-comments-o fa-lg"></i></td>-->
+                    <td><i class="fa fa-comments-o fa-lg"></i></td>
                     <td>
                       <a id="email" ng-href="mailto:{{room.relatedCreatorId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{room.relatedCreatorId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{dashboard.me.firstname}}%0Ahttps://campusly.org/roomDetail/{{room.roomDetails.id}}/of/{{room.roomDetails.id}}">
                         <i class="fa fa-envelope-o fa-lg"></i></a>
