--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -4,7 +4,7 @@
 
     <section class="value-landing">
 
-      <h1>Find and connect with verified students around you that share your interests</h1>
+      <h1>Explore your community - plan a grocery run, find someone to carpool, or post rental housing</h1>
 
     </section>
 
