Front-end changes for messages view. Added infinite scroll depedency to widgets module

--- a/client/app/messages/messages.html
+++ b/client/app/messages/messages.html
@@ -38,17 +38,7 @@
       -->
       <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
 
-        <h2>University</h2>
-        <div class="white-box messages-chatChannel">
-          <ul class="chatChannel">
-            <li ng-repeat="groupChannel in messages.groupChannels track by $index" ng-model="messages.groupChannels"><a  ng-click="messages.groupChannelCurrentSubscribe(groupChannel.name)" class={{selected}}>
-              <!-- List all the channels and add a button on each channel. For each click subscribe the user to that channel -->
-              {{groupChannel.name}} </a>
-            </li>
-          </ul>
-        </div>
-
-        <h2>Private Messages</h2>
+        <h2>Your Messages</h2>
         <div class="white-box messages-chatChannel">
           <!--If no messages prompt user to start a chat-->
           <p ng-if="!messages.privateMessages[0]">Start a chat to view your history</p>
@@ -60,7 +50,16 @@
               <a ng-click="messages.privateCurrentSubscribe(privateInbox.email)">{{privateInbox.user}}</a>
             </li>
           </ul>
+        </div>
 
+        <h2>Community</h2>
+        <div class="white-box messages-chatChannel">
+          <ul class="chatChannel">
+            <li ng-repeat="groupChannel in messages.groupChannels track by $index" ng-model="messages.groupChannels"><a  ng-click="messages.groupChannelCurrentSubscribe(groupChannel.name)" class={{selected}}>
+              <!-- List all the channels and add a button on each channel. For each click subscribe the user to that channel -->
+              {{groupChannel.name}} </a>
+            </li>
+          </ul>
         </div>
 
       </div>
@@ -73,22 +72,22 @@
       <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
 
         <h2>{{messages.currentChannel.name}}</h2>
-        <button ng-click="messages.grabCurrentChatHistory()">Older Chat history</button>
+
         <div class="white-box-messages">
 
           <!-- Messages to show the user -->
           <div class="row messages col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <a ng-click="messages.grabOlderCurrentChatHistory()" class="load-history pull-right">Load Chat History</a>
             <ul ng-repeat="message in messages.currentMessages track by $index" ng-model="messages.currentMessages">
               <li class="messagedUser">
                 <a ng-click="messages.newPrivateConversation(message.user, message.email)">{{message.user}}</a>
               </li> <!-- TODO 1) ability to pm this user if not self. 2) show my username only if there is another message before me 3) time stamp -->
-              <li>{{message.text}}</li>
+              <li>{{message.text}}
+                <span class="pull-right">{{message.time}}</span>
+              </li>
             </ul>
           </div>
 
-          <div class="row">
-
-          </div>
 
           <!-- Chat reply section -->
           <div class="row message-reply">
@@ -97,12 +96,12 @@
               <hr>
             </div>
 
-            <form>
+            <form name="chatBox">
               <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                <textarea placeholder="Your reply here..." type="text" ng-model='messages.newMessage' rows="3"></textarea>
+                <textarea placeholder="Your reply here..." type="text" ng-model="messages.newMessage" rows="3" ng-required="messages.newMessage"></textarea>
               </div>
               <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 message-button">
-                <button class="btn-rented-medium primary" ng-click="messages.currentPublish()">Reply</button>
+                <button class="btn-rented-medium primary" ng-click="messages.currentPublish()" ng-disabled="!chatBox.$valid">Reply</button>
               </div>
             </form>
 
